Use SSA_NAME_DEF_STMT only on SSA_NAMEs.

gcc/

2010-11-29  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline
	PR middle-end/46651
	2010-07-22  Sebastian Pop  <sebastian.pop@amd.com>

	* graphite-sese-to-poly.c (rewrite_phi_out_of_ssa): Use
	SSA_NAME_DEF_STMT only on SSA_NAMEs.
    
gcc/testsuite/

2010-11-29  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline
	2010-07-22  Sebastian Pop  <sebastian.pop@amd.com>

	PR middle-end/46651
	* gcc.dg/graphite/id-24.c: New.

From-SVN: r167274